--- a/.github/workflows/bump-cache-version.yml
+++ b/.github/workflows/bump-cache-version.yml
@@ -18,11 +18,14 @@ jobs:
         run: |
           git config user.name github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
-          git fetch origin master
-          git checkout master
-          git pull origin master
+          git fetch origin main
+          git checkout main
+          git pull origin main
           timestamp=$(date +%Y%m%d%H%M%S)
           git checkout -b bump-cache-version-${{ github.event.inputs.cache_version }}-$timestamp
+    
+      - name: Install dependencies
+        run: npm install
 
       - name: Update package.json
         run: |
